fix sidebar hiding and rm shorts on recommendations

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -68,6 +68,10 @@
                     <input type="checkbox" id="youtubeRelatedToggle" name="youtubeRelatedToggle">
                     <label for="youtubeRelatedToggle">Related/Up next videos</label>
                 </div>
+                <div class="a-toggle hide-checkboxes platform-ipad-mac">
+                    <input type="checkbox" id="youtubeSidebarToggle" name="youtubeSidebarToggle">
+                        <label for="youtubeSidebarToggle">Entire right sidebar</label>
+                </div>
                 <div class="a-toggle">
                     <input type="checkbox" id="youtubeCommentsToggle" name="youtubeCommentsToggle">
                     <label for="youtubeCommentsToggle">Comments</label>
