add ability to remove predictions in search

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -34,6 +34,10 @@
                       <label for="youtubeSearchToggle">Search box</label>
               </div>
               <div class="a-toggle">
+                  <input type="checkbox" id="youtubeSearchPredictToggle" name="youtubeSearchPredictToggle">
+                      <label for="youtubeSearchPredictToggle">Search predictions</label>
+              </div>
+              <div class="a-toggle">
                   <input type="checkbox" id="youtubeRecVidsToggle" name="youtubeRecVidsToggle">
                   <label for="youtubeRecVidsToggle">Recommended videos</label>
               </div>
