restrict search term prediction hiding to laptop and ipad

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -33,7 +33,7 @@
                   <input type="checkbox" id="youtubeSearchToggle" name="youtubeSearchToggle">
                       <label for="youtubeSearchToggle">Search box</label>
               </div>
-              <div class="a-toggle">
+              <div class="a-toggle platform-ipad-mac">
                   <input type="checkbox" id="youtubeSearchPredictToggle" name="youtubeSearchPredictToggle">
                       <label for="youtubeSearchPredictToggle">Search predictions</label>
               </div>
