--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -19,7 +19,7 @@
             <div class="toggle-group center-align">
                 <div class="a-toggle friction-toggle">
                       <input type="checkbox" id="frictionToggle" name="frictionToggle">
-                      <label for="frictionToggle">Delay to change settings</label>
+                      <label for="frictionToggle">Delay to open settings</label>
                   </div>
                 <div class="a-toggle friction-customisation">
                       <input type="number" id="waitTime" name="waitTime" value="10" min="1" max="600">
@@ -28,7 +28,7 @@
                   </div>
                 <div class="a-toggle friction-customisation">
                       <input type="text" id="waitText" name="waitText" value="What's your intention?">
-                      <label for="waitText"> Message</label>
+                      <label for="waitText"> Text</label>
                   </div>
             </div>
             <div class="toggle-group hide-checkboxes">
@@ -127,8 +127,9 @@
                 </div>
             </div>
         </div>
-        <p class="smaller-font">To flag bugs or suggest improvements, go to <a href="https://github.com/ulyngs/open-source-no-distractions-for-youtube" target="_blank">GitHub</a>.
-        </p>
+        <footer>
+            <a href="https://github.com/ulyngs/open-source-no-distractions-for-youtube" target="_blank">Suggest improvements</a>
+        </footer>
     </div>
 </body>
 </html>
