reorganise switches in more logical order

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -32,33 +32,7 @@
                   </div>
             </div>
             <div class="toggle-group hide-checkboxes">
-              <h2>Home page</h2>
-              <div class="a-toggle platform-iphone" id="hide-previews">
-                  <div id="how-to-arrow-right" style="display: inline-block;">
-                      <svg width="12px" height="12px" version="1.1" viewBox="0 0 1200 1200" xmlns="http://www.w3.org/2000/svg">
-                       <path d="m360 1170-90-91.199 478.8-478.8-478.8-478.8 90-91.199 570 570z"/>
-                      </svg>
-                  </div>
-                  <div id="how-to-arrow-down" style="display: none;">
-                      <svg width="12px" height="12px" version="1.1" viewBox="0 0 1200 1200" xmlns="http://www.w3.org/2000/svg">
-                       <path d="m652.1 915.27 526.35-524.55c28.742-30.539 28.742-77.246 0-105.99-28.742-28.742-77.246-28.742-105.99 0l-472.46 472.46-472.46-472.46c-30.539-28.742-77.246-28.742-105.99 0-28.742 28.742-28.742 75.449 0 105.99l524.55 524.55c30.539 28.742 77.246 28.742 105.99 0z" fill-rule="evenodd"/>
-                      </svg>
-                  </div>
-                  <p class="previews-text">Auto-playing previews</p>
-                  <p id="how-to-description" style="display: none;">Tap your account image > Settings > Account > untick 'Video previews'</p>
-              </div>
-              <div class="a-toggle">
-                  <input type="checkbox" id="youtubeSearchToggle" name="youtubeSearchToggle">
-                      <label for="youtubeSearchToggle">Search box</label>
-              </div>
-              <div class="a-toggle platform-ipad-mac">
-                  <input type="checkbox" id="youtubeSearchPredictToggle" name="youtubeSearchPredictToggle">
-                      <label for="youtubeSearchPredictToggle">Search predictions</label>
-              </div>
-              <div class="a-toggle">
-                  <input type="checkbox" id="youtubeRecVidsToggle" name="youtubeRecVidsToggle">
-                  <label for="youtubeRecVidsToggle">Recommended videos</label>
-              </div>
+              <h2>Menu bar</h2>
               <div class="a-toggle">
                   <input type="checkbox" id="youtubeShortsToggle" name="youtubeShortsToggle">
                   <label for="youtubeShortsToggle">Shorts</label>
@@ -85,7 +59,32 @@
               </div>
             </div>
             <div class="toggle-group hide-checkboxes">
-                <h2>When watching</h2>
+              <h2>Home page</h2>
+              <div class="a-toggle platform-iphone" id="hide-previews">
+                  <div id="how-to-arrow-right" style="display: inline-block;">
+                      <svg width="12px" height="12px" version="1.1" viewBox="0 0 1200 1200" xmlns="http://www.w3.org/2000/svg">
+                       <path d="m360 1170-90-91.199 478.8-478.8-478.8-478.8 90-91.199 570 570z"/>
+                      </svg>
+                  </div>
+                  <div id="how-to-arrow-down" style="display: none;">
+                      <svg width="12px" height="12px" version="1.1" viewBox="0 0 1200 1200" xmlns="http://www.w3.org/2000/svg">
+                       <path d="m652.1 915.27 526.35-524.55c28.742-30.539 28.742-77.246 0-105.99-28.742-28.742-77.246-28.742-105.99 0l-472.46 472.46-472.46-472.46c-30.539-28.742-77.246-28.742-105.99 0-28.742 28.742-28.742 75.449 0 105.99l524.55 524.55c30.539 28.742 77.246 28.742 105.99 0z" fill-rule="evenodd"/>
+                      </svg>
+                  </div>
+                  <p class="previews-text">Auto-playing previews</p>
+                  <p id="how-to-description" style="display: none;">Tap your account image > Settings > Account > untick 'Video previews'</p>
+              </div>
+              <div class="a-toggle">
+                  <input type="checkbox" id="youtubeRecVidsToggle" name="youtubeRecVidsToggle">
+                  <label for="youtubeRecVidsToggle">Recommended videos</label>
+              </div>
+              <div class="a-toggle">
+                  <input class="hide-checkbox" type="checkbox" id="youtubeProfileImgToggle" name="youtubeProfileImgToggle">
+                      <label for="youtubeProfileImgToggle">Account images</label>
+              </div>
+            </div>
+            <div class="toggle-group hide-checkboxes">
+                <h2>Watch page</h2>
                 <div class="a-toggle">
                     <input type="checkbox" id="youtubeRelatedToggle" name="youtubeRelatedToggle">
                     <label for="youtubeRelatedToggle">Related/Up next videos</label>
@@ -106,13 +105,17 @@
             <div class="toggle-group hide-checkboxes">
                 <h2>General</h2>
                 <div class="a-toggle">
+                    <input type="checkbox" id="youtubeSearchToggle" name="youtubeSearchToggle">
+                        <label for="youtubeSearchToggle">Search box</label>
+                </div>
+                <div class="a-toggle platform-ipad-mac">
+                    <input type="checkbox" id="youtubeSearchPredictToggle" name="youtubeSearchPredictToggle">
+                        <label for="youtubeSearchPredictToggle">Search predictions</label>
+                </div>
+                <div class="a-toggle">
                       <input class="hide-checkbox" type="checkbox" id="youtubeThumbnailsToggle" name="youtubeThumbnailsToggle">
                       <label for="youtubeThumbnailsToggle">Thumbnails</label>
                   </div>
-                <div class="a-toggle">
-                    <input class="hide-checkbox" type="checkbox" id="youtubeProfileImgToggle" name="youtubeProfileImgToggle">
-                        <label for="youtubeProfileImgToggle">Account images</label>
-                </div>
                 <div class="a-toggle">
                     <input class="hide-checkbox" type="checkbox" id="youtubeAdsToggle" name="youtubeAdsToggle">
                         <label for="youtubeAdsToggle">Ads</label>
