make video thumbnail checkbox cycle through third 'blur' option; make cursor a pointer for dropdown instructions

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -56,6 +56,20 @@
                   <p class="previews-text">Auto-playing previews</p>
                   <p id="how-to-description" style="display: none;">Tap your account image > Settings > Account > untick 'Video previews'</p>
               </div>
+              <div class="a-toggle platform-ipad-mac" id="hide-previews-not-mobile">
+                  <div id="how-to-arrow-right-not-mobile" style="display: inline-block;">
+                      <svg width="12px" height="12px" version="1.1" viewBox="0 0 1200 1200" xmlns="http://www.w3.org/2000/svg">
+                       <path d="m360 1170-90-91.199 478.8-478.8-478.8-478.8 90-91.199 570 570z"/>
+                      </svg>
+                  </div>
+                  <div id="how-to-arrow-down-not-mobile" style="display: none;">
+                      <svg width="12px" height="12px" version="1.1" viewBox="0 0 1200 1200" xmlns="http://www.w3.org/2000/svg">
+                       <path d="m652.1 915.27 526.35-524.55c28.742-30.539 28.742-77.246 0-105.99-28.742-28.742-77.246-28.742-105.99 0l-472.46 472.46-472.46-472.46c-30.539-28.742-77.246-28.742-105.99 0-28.742 28.742-28.742 75.449 0 105.99l524.55 524.55c30.539 28.742 77.246 28.742 105.99 0z" fill-rule="evenodd"/>
+                      </svg>
+                  </div>
+                  <p class="previews-text">Previews on hover</p>
+                  <p id="how-to-description-not-mobile" class="how-to-description" style="display: none;">Tap your account image > Settings > Playback and performance > toggle off 'Inline playback'</p>
+              </div>
               <div class="a-toggle">
                   <input type="checkbox" id="youtubeRecVidsToggle" name="youtubeRecVidsToggle">
                   <label for="youtubeRecVidsToggle">Recommended videos</label>
@@ -91,9 +105,9 @@
                         <label for="youtubeAdsToggle">Ads</label>
                 </div>
                 <div class="a-toggle">
-                      <input class="hide-checkbox" type="checkbox" id="youtubeThumbnailsToggle" name="youtubeThumbnailsToggle">
-                      <label for="youtubeThumbnailsToggle">Video thumbnails</label>
-                  </div>
+                    <button class="tri-state-checkbox" id="youtubeThumbnailsToggle" data-state="On"></button>
+                    <label class="tri-state-label" for="youtubeThumbnailsToggle">Video thumbnails</label>
+                </div>
                 <div class="a-toggle">
                     <input class="hide-checkbox" type="checkbox" id="youtubeViewsToggle" name="youtubeViewsToggle">
                         <label for="youtubeViewsToggle">View numbers</label>
