--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -74,10 +74,6 @@
                   <input type="checkbox" id="youtubeRecVidsToggle" name="youtubeRecVidsToggle">
                   <label for="youtubeRecVidsToggle">Recommended videos</label>
               </div>
-              <div class="a-toggle">
-                  <input class="hide-checkbox" type="checkbox" id="youtubeProfileImgToggle" name="youtubeProfileImgToggle">
-                      <label for="youtubeProfileImgToggle">Account images</label>
-              </div>
             </div>
             <div class="toggle-group hide-checkboxes">
                 <h2>Watch page</h2>
@@ -104,9 +100,17 @@
                     <input class="hide-checkbox" type="checkbox" id="youtubeAdsToggle" name="youtubeAdsToggle">
                         <label for="youtubeAdsToggle">Ads</label>
                 </div>
+                <div class="a-toggle platform-ipad-mac">
+                    <button class="tri-state-checkbox" id="youtubeNotificationsToggle" data-state="On"></button>
+                    <label class="tri-state-label" for="youtubeNotificationsToggle">Notifications</label>
+                </div>
                 <div class="a-toggle">
                     <button class="tri-state-checkbox" id="youtubeThumbnailsToggle" data-state="On"></button>
                     <label class="tri-state-label" for="youtubeThumbnailsToggle">Video thumbnails</label>
+                </div>
+                <div class="a-toggle">
+                    <input class="hide-checkbox" type="checkbox" id="youtubeProfileImgToggle" name="youtubeProfileImgToggle">
+                        <label for="youtubeProfileImgToggle">Account images</label>
                 </div>
                 <div class="a-toggle">
                     <input class="hide-checkbox" type="checkbox" id="youtubeViewsToggle" name="youtubeViewsToggle">
