add occasional review prompt

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -6,6 +6,13 @@
     <script type="module" src="popup.js"></script>
 </head>
 <body>
+    <div id="reviewPrompt" style="display: none;">
+            <div class="review-prompt-content">
+                <p>Enjoying the extension? Take a moment to rate or review us!</p>
+                <a href="https://apps.apple.com/gb/app/no-distractions-for-youtube/id1482507016" target="_blank" class="review-link">Leave a Review</a>
+                <button id="noThanksButton">No, thanks / I already did!</button>
+            </div>
+        </div>
     <div id="delay-content" style="display: none;">
         <p id="delay-message"></p>
         <img src="/images/calm.svg" class="breathing"/>
